--- a/main.html
+++ b/main.html
@@ -11,7 +11,7 @@
     <script type="text/javascript" src="./script.js">
 </script>
 
-	<button id="btn">Submit button</button>
+	<input type="submit" id="btn">
 </body>
 
 </html>
